; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_reflection.c_free_type_member.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_reflection.c_free_type_member.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dcompiler_shader_reflection_type_member = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.d3dcompiler_shader_reflection_type_member*)* @free_type_member to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_type_member(%struct.d3dcompiler_shader_reflection_type_member* %0) #0 {
  %2 = alloca %struct.d3dcompiler_shader_reflection_type_member*, align 8
  store %struct.d3dcompiler_shader_reflection_type_member* %0, %struct.d3dcompiler_shader_reflection_type_member** %2, align 8
  %3 = load %struct.d3dcompiler_shader_reflection_type_member*, %struct.d3dcompiler_shader_reflection_type_member** %2, align 8
  %4 = icmp ne %struct.d3dcompiler_shader_reflection_type_member* %3, null
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = call i32 (...) @GetProcessHeap()
  %7 = load %struct.d3dcompiler_shader_reflection_type_member*, %struct.d3dcompiler_shader_reflection_type_member** %2, align 8
  %8 = getelementptr inbounds %struct.d3dcompiler_shader_reflection_type_member, %struct.d3dcompiler_shader_reflection_type_member* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @HeapFree(i32 %6, i32 0, i32 %9)
  br label %11

11:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @HeapFree(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
